trunk/Archive2/5b/7c634a89d8bf6c/output
main.cpp:30:4: error: no viable overloaded '+='
        s += 99;       //uses conversion to int[3] ref, then...adds 99 to the first element. WTF?
        ~ ^  ~~
1 error generated.
